upload all files

--- a/products.html
+++ b/products.html
@@ -578,7 +578,7 @@ const PRODUCTS = [
     tds: [
   { label: "TDS Blackening for Brass & Copper", href: "https://www.baumechemical.com/docs/tds/bk.pdf" },
   { label: "TDS Blackening for Steel", href: "https://www.baumechemical.com/docs/tds/autoblack.pdf" },
-  { label: "TDS Blackening for Steel", href: "https://www.baumechemical.com/docs/tds/alublack.pdf" },
+  { label: "TDS Blackening for Aluminium", href: "https://www.baumechemical.com/docs/tds/alublack.pdf" },
   { label: "TDS Patina", href: "https://www.baumechemical.com/docs/tds/patina.pdf" }
 ],
     specs:{ph:"2-5", temp:"Room temperature", current:"—"}
