upload all files

--- a/products.html
+++ b/products.html
@@ -593,7 +593,16 @@ const PRODUCTS = [
     img:"https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg",
     href:"products/passivation/index.html",
     mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: โครเมตบนซิงค์",
-    tds:"https://www.baumechemical.com/docs/tds/passivation-zinc.pdf",
+    tds: [
+  { label: "TDS Blue (White) Chromate 3", href: "https://www.baumechemical.com/docs/tds/triblue.pdf" },
+  { label: "TDS Black Chromate 3", href: "https://www.baumechemical.com/docs/tds/471.pdf" },
+  { label: "TDS Iridescent Chromate 3", href: "https://www.baumechemical.com/docs/tds/350.pdf" },
+  { label: "TDS Yellow Chromate 3", href: "https://www.baumechemical.com/docs/tds/triyellow.pdf" },
+  { label: "TDS Blue (White) Chromate 6", href: "https://www.baumechemical.com/docs/tds/zincchromating.pdf" },
+  { label: "TDS Black Chromate 6", href: "https://www.baumechemical.com/docs/tds/80.pdf" },
+  { label: "TDS Yellow Chromate 6", href: "https://www.baumechemical.com/docs/tds/5006.pdf" },
+  { label: "TDS Olive Drab Chromate 6", href: "https://www.baumechemical.com/docs/tds/hexgreen.pdf" }
+],
     specs:{ph:"1.5-2.5", temp:"Room temperature", current:"—"},
     swatches:["#b7d3ff","#ffe07a","#3b3b3b","#a5b38b"]
   },
