upload all files

--- a/products.html
+++ b/products.html
@@ -616,7 +616,11 @@ const PRODUCTS = [
     img:"https://img2.pic.in.th/pic/thumbnail-4.jpg",
     href:"products/strippers/index.html",
     mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยาลอกต่างๆ",
-    tds:"https://www.baumechemical.com/docs/tds/selective-strippers.pdf",
+        tds: [
+  { label: "TDS Nickel Stripper for Steel", href: "https://www.baumechemical.com/docs/tds/rs109.pdf" },
+  { label: "TDS Nickel Stripper for Copper & Brass", href: "https://www.baumechemical.com/docs/tds/rs.pdf" },
+  { label: "TDS Electroplated Nickel Stripper for Steel", href: "https://www.baumechemical.com/docs/tds/th9.pdf" }
+],
     specs:{ph:"12-14", temp:"50-70", current:"2–6 A/dm²"}
   },
   {
@@ -629,7 +633,13 @@ const PRODUCTS = [
     img:"https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg",
     href:"products/polishing/index.html",
     mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยากัดเงา",
-    tds:"https://www.baumechemical.com/docs/tds/chemical-polishing.pdf",
+    tds: [
+  { label: "TDS Stainless Steel (Electropolishing)", href: "https://www.baumechemical.com/docs/tds/8511.pdf" },
+  { label: "TDS Brass Polishing", href: "https://www.baumechemical.com/docs/tds/laserb.pdf" },
+  { label: "TDS Aluminum (Hot Dip / Electro)", href: "https://www.baumechemical.com/docs/tds/8539.pdf" },
+  { label: "TDS Steel (Brite Dip)", href: "https://www.baumechemical.com/docs/tds/steelbrite.pdf" },
+  { label: "TDS Zinc & Lead (Etched to a shine)", href: "https://www.baumechemical.com/docs/tds/mz52.pdf" }
+],
     specs:{ph:"<1", temp:"Aluminium 65–80 °C", current:"1–3 A/dm²"}
   },
   {
