upload all files

--- a/products.html
+++ b/products.html
@@ -652,7 +652,14 @@ const PRODUCTS = [
     img:"https://i.imgur.com/tP3buYl.jpeg",
     href:"products/protective/index.html",
     mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยารักษาผิวชุบให้คงทน",
-    tds:"https://www.baumechemical.com/docs/tds/protective-treatment.pdf",
+    tds: [
+  { label: "TDS Cold Dip Anti-Tarnish", href: "https://www.baumechemical.com/docs/tds/antitarnish.pdf" },
+  { label: "TDS Hot Dip Anti-Tarnish", href: "https://www.baumechemical.com/docs/tds/bu816.pdf" },
+  { label: "TDS Electro Anti-Tarnish", href: "https://www.baumechemical.com/docs/tds/bu20.pdf" },
+  { label: "TDS Tin Anti-Tarnish", href: "https://www.baumechemical.com/docs/tds/b100.pdf" },
+  { label: "TDS Electrolytic Lacquer", href: "https://www.baumechemical.com/docs/tds/2020.pdf" },
+  { label: "TDS Top Coat Two-Tone", href: "https://www.baumechemical.com/docs/tds/twotone.pdf" }
+],
     specs:{ph:"2.5–6", temp:"70–95", current:"0.5–2.0 A/dm²"}
   },
   {
