--- a/products/protective/index.html
+++ b/products/protective/index.html
@@ -392,6 +392,17 @@
           <a class="more" href="troubleshootingelectrophoreticlacquer.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
+
+            <!-- Water-based Lacquer -->
+      <article class="card lift reveal">
+        <picture><img src="https://img2.pic.in.th/pic/thumbnail-2.jpg" alt="Water-based lacquer coating"></picture>
+        <div class="body">
+          <div class="badge-row"><span class="badge">Protective</span><span class="badge">Masking Lacquer</span></div>
+          <h3 data-i18n-key="lacq_t1">Masking Lacquer</h3>
+          <p data-i18n-key="lacq_d1">ทำหน้าที่เป็นฉนวนป้องกันการชุบโลหะในบางพื้นที่ของชิ้นงาน การใช้สารนี้ทำให้สามารถสร้างลวดลายแบบ สองโทนสี (Two-tone) หรือหลายสีบนชิ้นงานเดียว</p>
+          <a class="more" href="topcoat-two-tone.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+        </div>
+      </article>
     </div>
   </main>
 
@@ -537,7 +548,9 @@
         tin_t:"Tin Anti-Tarnish",
         tin_d:"ป้องกันหมองบนผิวดีบุก คงโทนสีเดิมยาวนาน เพิ่มความทนผิว อ่างเสถียร อายุเก็บยาวโดยไม่เสื่อม.",
         lacq_t:"Lacquer Coating",
+        lacq_t1:"Masking Lacquer",
         lacq_d:"แลคเกอร์น้ำ เพิ่มความทนเค็ม/กันหมอง ใช้กับซิงค์แม้ไม่โครเมต หรือทับ Cr3/Cr6 ก็ได้ โทนผิวไม่เพี้ยน เหมาะกับ Ni/Cr/Cu/Brass/SS/Al.",
+        lacq_d1:"ทำหน้าที่เป็นฉนวนป้องกันการชุบโลหะในบางพื้นที่ของชิ้นงาน การใช้สารนี้ทำให้สามารถสร้างลวดลายแบบ สองโทนสี (Two-tone) หรือหลายสีบนชิ้นงานเดียว",
         view_details:"ดูรายละเอียด →",
         footer_products:"หมวดผลิตภัณฑ์",
         footer_contact:"ติดต่อเรา",
@@ -564,7 +577,9 @@
         tin_t:"Tin Anti-Tarnish",
         tin_d:"For tin surfaces; maintains original tone for long periods and improves durability. Highly stable bath with long shelf life.",
         lacq_t:"Lacquer Coating",
+        lacq_t1:"Lacquer Coating",
         lacq_d:"Water-based lacquer boosting salt-spray and tarnish resistance. Apply on Zn/Zn-alloy without chromate, or over Cr3/Cr6. Tone-neutral; suitable for Ni/Cr/Cu/Brass/SS/Al.",
+        lacq_d1:"It serves as an insulating barrier against metal plating in certain areas of the workpiece. Using this substance makes it possible to create patterns in two tones (Two-tone) or multiple colors on a single piece.",
         view_details:"View Details →",
         footer_products:"Products",
         footer_contact:"Contact Us",
