upload all files

--- a/products.html
+++ b/products.html
@@ -555,7 +555,7 @@ const PRODUCTS = [
     href:"products/platingcoating/index.html",
     mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยาชุบโลหะ",
     tds: [
-  { label: "TDS Zinc Plating", href: "https://www.baumechemical.com/docs/tds/111b.pdf" },
+  { label: "TDS Zinc Plating", href: "https://www.baumechemical.com/docs/tds/zinc.pdf" },
   { label: "TDS Nickel Plating", href: "https://www.baumechemical.com/docs/tds/a-brite.pdf" },
   { label: "TDS Copper Plating", href: "https://www.baumechemical.com/docs/tds/copper900.pdf" },
   { label: "TDS Brass Plating", href: "https://www.baumechemical.com/docs/tds/brass-salt.pdf" },
