--- a/products.html
+++ b/products.html
@@ -556,7 +556,7 @@ const PRODUCTS = [
     mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยาชุบโลหะ",
     tds: [
   { label: "TDS Zinc Plating", href: "https://www.baumechemical.com/docs/tds/zinc.pdf" },
-  { label: "TDS Nickel Plating", href: "https://www.baumechemical.com/docs/tds/a-brite.pdf" },
+  { label: "TDS Nickel Plating", href: "https://www.baumechemical.com/docs/tds/nickel.pdf" },
   { label: "TDS Copper Plating", href: "https://www.baumechemical.com/docs/tds/copper900.pdf" },
   { label: "TDS Brass Plating", href: "https://www.baumechemical.com/docs/tds/brass-salt.pdf" },
   { label: "TDS Electrolytic Lacquer", href: "https://www.baumechemical.com/docs/tds/2020.pdf" },
