upload all files

--- a/products.html
+++ b/products.html
@@ -557,7 +557,7 @@ const PRODUCTS = [
     tds: [
   { label: "TDS Zinc Plating", href: "https://www.baumechemical.com/docs/tds/zinc.pdf" },
   { label: "TDS Nickel Plating", href: "https://www.baumechemical.com/docs/tds/nickel.pdf" },
-  { label: "TDS Copper Plating", href: "https://www.baumechemical.com/docs/tds/copper900.pdf" },
+  { label: "TDS Copper Plating", href: "https://www.baumechemical.com/docs/tds/copper.pdf" },
   { label: "TDS Brass Plating", href: "https://www.baumechemical.com/docs/tds/brass-salt.pdf" },
   { label: "TDS Electrolytic Lacquer", href: "https://www.baumechemical.com/docs/tds/2020.pdf" },
   { label: "TDS Cyanide-Free White Bronze", href: "https://www.baumechemical.com/docs/tds/317m.pdf" },
