upload all files

--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -412,7 +412,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Tin</span><span class="badge">Matte</span></div>
           <h3 data-i18n-key="ti_title1">น้ำยาชุบดีบุกด้าน</h3>
-          <p data-i18n-key="ti_desc1">Teknomatte 8000 เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความน่าเชื่อถือและการบัดกรีสูง</p>
+          <p data-i18n-key="ti_desc1">Teknomatte 8000 เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความทนทานและเสถียรภาพสูงกว่ามาตรฐานทั่วไปและความสามารถในการบัดกรีระหว่างผิวโลหะกับโลหะบัดกรี</p>
           <a class="more" href="matte-tinplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
