--- a/products/platingcoating/matte-tinplating/index.html
+++ b/products/platingcoating/matte-tinplating/index.html
@@ -237,7 +237,7 @@
         <div class="content">
           <p data-i18n-key="intro_p1">
             Teknomatte 8000 เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ
-            พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความน่าเชื่อถือและการบัดกรีสูง
+            พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความทนทานและเสถียรภาพสูงกว่ามาตรฐานทั่วไปและความสามารถในการบัดกรีระหว่างผิวโลหะกับโลหะบัดกรี
           </p>
         </div>
       </section>
@@ -465,7 +465,7 @@
         toc_notes:"หมายเหตุ",
 
         intro_h:"ภาพรวมผลิตภัณฑ์",
-        intro_p1:"Teknomatte 8000 เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความน่าเชื่อถือและการบัดกรีสูง",
+        intro_p1:"Teknomatte 8000 เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความทนทานและเสถียรภาพสูงกว่ามาตรฐานทั่วไปและความสามารถในการบัดกรีระหว่างผิวโลหะกับโลหะบัดกรี",
 
         recipe_h:"สภาวะและสูตรผสมมาตรฐาน (สำหรับ 100 ลิตร)",
         recipe_lead:"สูตรผสมสารเคมีหลัก",
