upload all files

--- a/products.html
+++ b/products.html
@@ -561,7 +561,8 @@ const PRODUCTS = [
   { label: "TDS Brass Plating", href: "https://www.baumechemical.com/docs/tds/brass-salt.pdf" },
   { label: "TDS Electrolytic Lacquer", href: "https://www.baumechemical.com/docs/tds/2020.pdf" },
   { label: "TDS Cyanide-Free White Bronze", href: "https://www.baumechemical.com/docs/tds/317m.pdf" },
-  { label: "TDS Bright Tin Plating", href: "https://www.baumechemical.com/docs/tds/4140.pdf" }
+  { label: "TDS Bright Tin Plating", href: "https://www.baumechemical.com/docs/tds/4140.pdf" },
+  { label: "TDS Matte Tin Plating", href: "https://www.baumechemical.com/docs/tds/8000.pdf" }
 ],
     specs:{ph:"-", temp:"-", current:"-"}
   },
