upload all files

--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -560,7 +560,7 @@
         wb_title:"ไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์",
         ti_title: "น้ำยาชุบดีบุกเงา",
         ti_title1: "น้ำยาชุบดีบุกด้าน",
-        ti_desc1: "Teknomatte 8000 เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความน่าเชื่อถือและการบัดกรีสูง",
+        ti_desc1: "Teknomatte 8000 เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความทนทานและเสถียรภาพสูงกว่ามาตรฐานทั่วไปและความสามารถในการบัดกรีระหว่างผิวโลหะกับโลหะบัดกรี",
         wb_desc:"สูตรปลอดไซยาไนด์ ลดความเสี่ยงด้านสิ่งแวดล้อม/ความปลอดภัย ผิวขาวเงิน เงา กระจายตัวดี คุมง่าย ลดต้นทุนบำบัด เหมาะกับถังแขวน/ถังกลิ้ง และโลหะฐานหลากหลาย",
         ti_desc: "น้ำยาชุบดีบุกเงาเป็นสารเคมีที่ใช้ในกระบวนการชุบโลหะด้วยไฟฟ้าเพื่อสร้างชั้นเคลือบดีบุกที่มีคุณสมบัติโดดเด่นในเรื่องความเงางาม การกระจายตัวที่ดีเยี่ยม และปราศจากรอยด่างดำหรือฝ้ามัวบนพื้นผิว ทำให้ได้ชิ้นงานที่ดูสวยงามและเรียบเนียนสม่ำเสมอ",
         
