--- a/products/platingcoating/matte-tinplating/index.html
+++ b/products/platingcoating/matte-tinplating/index.html
@@ -6,7 +6,7 @@
   <title data-i18n-key="title">Teknomatte 8000 — คู่มือชุบดีบุกด้าน (Matte Tin)</title>
 
   <!-- SEO base -->
-  <meta name="description" content="Teknomatte 8000 ระบบชุบดีบุกด้าน (Matte Tin) สำหรับงานอิเล็กทรอนิกส์: สูตรผสม 100 ลิตร สภาวะการทำงาน ขั้นตอน Make-up/ชุบ การควบคุมบ่อ และความปลอดภัย พร้อม i18n ไทย/อังกฤษ">
+  <meta name="description" content="Teknomatte 8000 ระบบชุบดีบุกด้าน (Matte Tin) สำหรับงานอิเล็กทรอนิกส์: สูตรผสม 100 ลิตร สภาวะการทำงาน ขั้นตอน Make-up/ชุบ การควบคุมบ่อ และความปลอดภัย เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความทนทานและเสถียรภาพสูงกว่ามาตรฐานทั่วไปและความสามารถในการบัดกรีระหว่างผิวโลหะกับโลหะบัดกรี">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/matte-tinplating/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -20,7 +20,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Teknomatte 8000 — Matte Tin Plating Guide">
-  <meta property="og:description" content="คู่มือใช้งาน Teknomatte 8000 สำหรับการชุบดีบุกด้าน: สูตรผสม 100 ลิตร พารามิเตอร์ การควบคุมบ่อ และข้อควรระวัง">
+  <meta property="og:description" content="คู่มือใช้งาน Teknomatte 8000 สำหรับการชุบดีบุกด้าน: เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความทนทานและเสถียรภาพสูงกว่ามาตรฐานทั่วไปและความสามารถในการบัดกรีระหว่างผิวโลหะกับโลหะบัดกรี สูตรผสม 100 ลิตร พารามิเตอร์ การควบคุมบ่อ และข้อควรระวัง">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/matte-tinplating/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-397e817e97b35e056.jpg">
   <meta name="twitter:card" content="summary_large_image">
