upload all files

--- a/products/protective/tin-anti-tarnish-b100.html
+++ b/products/protective/tin-anti-tarnish-b100.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Tin Anti-Tarnish B100 — น้ำยากันหมองดีบุก">
   <meta property="og:description" content="ชั้นฟิล์มใสป้องกันการหมองของดีบุก ใช้ 50–100 cc/L • 30–55 °C • 10 s–1 min • DI water">
   <meta property="og:url" content="https://www.baumechemical.com/products/protective/tin-anti-tarnish-b100.html">
-  <meta property="og:image" content="https://i.imgur.com/XZQoDHI.jpeg">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-4.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -31,7 +31,7 @@
   "@type": "Product",
   "name": "Tin Anti-Tarnish B100 — น้ำยากันหมองดีบุก",
   "description": "น้ำยาเคลือบป้องกันการออกซิเดชันของดีบุก สร้างฟิล์มใสคงสี ใช้งาน 50–100 cc/L, 30–55 °C, 10 s–1 min, ผสมน้ำกลั่น",
-  "image": "https://i.imgur.com/XZQoDHI.jpeg",
+  "image": "https://img5.pic.in.th/file/secure-sv1/thumbnail-4.jpg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Protective Treatment",
   "inLanguage": "th",
@@ -45,14 +45,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/XZQoDHI.jpeg"/>
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/thumbnail-4.jpg"/>
 
   <style>
     :root{
       --brand:#2c5e4e; --brand-2:#387b5b; --ink:#0f172a; --muted:#5b6675; --bg:#f4f6f5;
       --radius:14px; --shadow-1:0 8px 26px rgba(2,8,20,.06); --shadow-2:0 16px 40px rgba(2,8,20,.14);
       --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
-      --hero-url:url('https://i.imgur.com/XZQoDHI.jpeg');
+      --hero-url:url('https://img5.pic.in.th/file/secure-sv1/thumbnail-4.jpg');
       --header-h:64px; --container:1200px;
     }
     *{box-sizing:border-box}
