--- a/products/protective/index.html
+++ b/products/protective/index.html
@@ -373,7 +373,7 @@
 
       <!-- Tin Anti-Tarnish -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/XZQoDHI.jpeg" alt="Tin Anti-Tarnish"></picture>
+        <picture><img src="https://img5.pic.in.th/file/secure-sv1/thumbnail-4.jpg" alt="Tin Anti-Tarnish"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Protective</span><span class="badge">Tin</span></div>
           <h3 data-i18n-key="tin_t">Tin Anti-Tarnish</h3>
