upload all files

--- a/products/protective/index.html
+++ b/products/protective/index.html
@@ -377,7 +377,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Protective</span><span class="badge">Tin</span></div>
           <h3 data-i18n-key="tin_t">Tin Anti-Tarnish</h3>
-          <p data-i18n-key="tin_d">น้ำยาป้องกันหมองบนผิวดีบุก ช่วยคงโทนสีเดิมได้ยาวนาน เพิ่มความทนผิว อ่างมีเสถียรภาพสูง อายุการเก็บนานนับปีโดยไม่เสื่อม.</p>
+          <p data-i18n-key="tin_d">น้ำยาป้องกันหมองบนผิวดีบุก ช่วยคงโทนสีเดิมได้ยาวนาน เพิ่มความทนผิว อ่างมีเสถียรภาพสูง อายุการเก็บนานนับปีโดยไม่เสื่อม</p>
           <a class="more" href="tin-anti-tarnish-b100.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -542,11 +542,11 @@
         cold_t:"Cold Dip Anti-Tarnish (Cu/Brass)",
         cold_d:"น้ำยาใสอมเหลือง ใช้เป็นบ่อสุดท้ายหลังชุบหรือหลังล้างเงา ช่วยไล่คราบน้ำ แห้งไว ไม่ทิ้งรอย สร้างฟิล์มใสป้องกันหมอง เหมาะงานอิเล็กทรอนิกส์/จิวเวลรี่ ทดสอบความชื้นได้ ~200 ชม.",
         hot_t:"Hot Dip Anti-Tarnish",
-        hot_d:"เคมีเคลือบผิวสำหรับซิงค์ นิกเกิล โครม สแตนเลส ทอง เงิน ฯลฯ ไล่คราบน้ำ แห้งไว ป้องกันสนิมบริเวณไม่ได้ชุบ ฟิล์มยืดหยุ่น ทนทาน ไร้สารตะกั่ว ผิวสัมผัสปลอดภัย.",
+        hot_d:"เคมีเคลือบผิวสำหรับซิงค์ นิกเกิล โครม สแตนเลส ทอง เงิน ฯลฯ ไล่คราบน้ำ แห้งไว ป้องกันสนิมบริเวณไม่ได้ชุบ ฟิล์มยืดหยุ่น ทนทาน ไร้สารตะกั่ว ผิวสัมผัสปลอดภัย",
         elec_t:"Electro Anti-Tarnish",
-        elec_d:"สำหรับเงิน ทอง นิกเกิล ทองแดง/อัลลอยด์ เคลือบไฟฟ้าล็อกสี ลดหมอง แห้งไว ผิวลื่น ไม่ระคายเคือง และไม่ก่อสีผิดเพี้ยน.",
+        elec_d:"สำหรับเงิน ทอง นิกเกิล ทองแดง/อัลลอยด์ เคลือบไฟฟ้าล็อกสี ลดหมอง แห้งไว ผิวลื่น ไม่ระคายเคือง และไม่ก่อสีผิดเพี้ยน",
         tin_t:"Tin Anti-Tarnish",
-        tin_d:"ป้องกันหมองบนผิวดีบุก คงโทนสีเดิมยาวนาน เพิ่มความทนผิว อ่างเสถียร อายุเก็บยาวโดยไม่เสื่อม.",
+        tin_d:"ป้องกันหมองบนผิวดีบุก คงโทนสีเดิมยาวนาน เพิ่มความทนผิว อ่างเสถียร อายุเก็บยาวโดยไม่เสื่อม",
         lacq_t:"Lacquer Coating",
         lacq_t1:"Masking Lacquer",
         lacq_d:"แลคเกอร์น้ำ เพิ่มความทนเค็ม/กันหมอง ใช้กับซิงค์แม้ไม่โครเมต หรือทับ Cr3/Cr6 ก็ได้ โทนผิวไม่เพี้ยน เหมาะกับ Ni/Cr/Cu/Brass/SS/Al.",
