upload all files

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         <div class="body">
           <div class="badges"><span class="badge">Plating</span><span class="badge">Zinc/Nickel/Copper/Brass</span></div>
           <h3 data-i18n-key="card_plating_title">น้ำยาชุบโลหะ</h3>
-          <p data-i18n-key="card_plating_desc">เพิ่มความเงางามให้กับชิ้นงาน ซิงค์ นิกเกิล ทองแดง ทองเหลือง และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์</p>
+          <p data-i18n-key="card_plating_desc">เพิ่มความเงางามให้กับชิ้นงาน ซิงค์ นิกเกิล ทองแดง ทองเหลือง ไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ และดีบุก</p>
           <a class="more" href="products/platingcoating/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -861,7 +861,7 @@ const I18N = {
     card_pret_title: "เคมีล้างผิวงาน",
     card_pret_desc: "ยาล้างไขมันแบบกรด/ด่าง และอัลตร้าโซนิคช่วยกำจัดคราบน้ำมัน/สนิม เตรียมผิวพร้อมชุบ ลดของเสียในไลน์",
     card_plating_title: "น้ำยาชุบโลหะ",
-    card_plating_desc: "เพิ่มความเงางามให้กับชิ้นงาน ซิงค์ นิกเกิล ทองแดง ทองเหลือง และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์",
+    card_plating_desc: "เพิ่มความเงางามให้กับชิ้นงาน ซิงค์ นิกเกิล ทองแดง ทองเหลือง ไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ และดีบุก",
     card_black_title: "น้ำยารมดำโลหะ",
     card_black_desc: "งานรมดำ เพื่อเพิ่มความสวยงาม ป้องกันการกัดกร่อน และลดแสงสะท้อน สีสม่ำเสมอ คุมกระบวนการง่าย",
     card_pass_title: "โครเมตบนซิงค์",
@@ -924,7 +924,7 @@ const I18N = {
     card_pret_title: "Pretreatment & Cleaning",
     card_pret_desc: "Acid/alkaline degreasers and ultrasonic cleaning remove oil/rust, preparing surfaces for plating and reducing line rejects.",
     card_plating_title: "Metal Plating Chemistry",
-    card_plating_desc: "Bright, consistent finishes: zinc, nickel, copper, brass, and cyanide-free white bronze.",
+    card_plating_desc: "Bright, consistent finishes: zinc, nickel, copper, brass, cyanide-free white bronze and tin.",
     card_black_title: "Blackening Solutions",
     card_black_desc: "Attractive matte protection with reduced glare and corrosion; even color and easy process control.",
     card_pass_title: "Passivation on Zinc",
