--- a/products/protective/index.html
+++ b/products/protective/index.html
@@ -382,13 +382,13 @@
         </div>
       </article>
 
-      <!-- Water-based Lacquer -->
+      <!-- Electro Lacquer -->
       <article class="card lift reveal">
-        <picture><img src="https://img2.pic.in.th/pic/image70df94b7a595d49ee.jpeg" alt="Water-based lacquer coating"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/image70df94b7a595d49ee.jpeg" alt="Electro lacquer coating"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Protective</span><span class="badge">Lacquer (Water-based)</span></div>
           <h3 data-i18n-key="lacq_t">Lacquer Coating</h3>
-          <p data-i18n-key="lacq_d">แลคเกอร์น้ำ เพิ่มความทนเค็มและกันหมอง ใช้กับซิงค์/อัลลอยด์ได้แม้ไม่โครเมต หรือทับบน Cr3/Cr6 ก็ได้ โทนผิวไม่เพี้ยน เหมาะกับ Ni/Cr/Cu/Brass/SS/Al.</p>
+          <p data-i18n-key="lacq_d">แลคเกอร์น้ำ เพิ่มความทนเค็มและกันหมอง ใช้กับซิงค์/อัลลอยด์ได้แม้ไม่โครเมต หรือทับบน Cr3/Cr6 ก็ได้ โทนผิวไม่เพี้ยน เหมาะกับนิกเกิล (Ni), โครเมียม (Cr), ทองแดง (Cu), ทองเหลือง (Brass), สเตนเลส (SS), และ อะลูมิเนียม (Al)</p>
           <a class="more" href="troubleshootingelectrophoreticlacquer.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -549,7 +549,7 @@
         tin_d:"ป้องกันหมองบนผิวดีบุก คงโทนสีเดิมยาวนาน เพิ่มความทนผิว อ่างเสถียร อายุเก็บยาวโดยไม่เสื่อม",
         lacq_t:"Lacquer Coating",
         lacq_t1:"Masking Lacquer",
-        lacq_d:"แลคเกอร์น้ำ เพิ่มความทนเค็ม/กันหมอง ใช้กับซิงค์แม้ไม่โครเมต หรือทับ Cr3/Cr6 ก็ได้ โทนผิวไม่เพี้ยน เหมาะกับ Ni/Cr/Cu/Brass/SS/Al.",
+        lacq_d:"แลคเกอร์น้ำ เพิ่มความทนเค็ม/กันหมอง ใช้กับซิงค์แม้ไม่โครเมต หรือทับ Cr3/Cr6 ก็ได้ โทนผิวไม่เพี้ยน เหมาะกับนิกเกิล, โครเมียม, ทองแดง, ทองเหลือง, สเตนเลส, และ อะลูมิเนียม",
         lacq_d1:"ทำหน้าที่เป็นฉนวนป้องกันการชุบโลหะในบางพื้นที่ของชิ้นงาน การใช้สารนี้ทำให้สามารถสร้างลวดลายแบบ สองโทนสี (Two-tone) หรือหลายสีบนชิ้นงานเดียว",
         view_details:"ดูรายละเอียด →",
         footer_products:"หมวดผลิตภัณฑ์",
@@ -578,7 +578,7 @@
         tin_d:"For tin surfaces; maintains original tone for long periods and improves durability. Highly stable bath with long shelf life.",
         lacq_t:"Lacquer Coating",
         lacq_t1:"Lacquer Coating",
-        lacq_d:"Water-based lacquer boosting salt-spray and tarnish resistance. Apply on Zn/Zn-alloy without chromate, or over Cr3/Cr6. Tone-neutral; suitable for Ni/Cr/Cu/Brass/SS/Al.",
+        lacq_d:"Water-based lacquer boosting salt-spray and tarnish resistance. Apply on Zn/Zn-alloy without chromate, or over Cr3/Cr6. Tone-neutral; suitable for Nickel, Chromium, Copper, Brass, Stainless Steel, and Aluminum.",
         lacq_d1:"It serves as an insulating barrier against metal plating in certain areas of the workpiece. Using this substance makes it possible to create patterns in two tones (Two-tone) or multiple colors on a single piece.",
         view_details:"View Details →",
         footer_products:"Products",
