upload all files

--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -412,7 +412,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Tin</span><span class="badge">Matte</span></div>
           <h3 data-i18n-key="ti_title1">น้ำยาชุบดีบุกด้าน</h3>
-          <p data-i18n-key="ti_desc1">Teknomatte 8000 เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความทนทานและเสถียรภาพสูงกว่ามาตรฐานทั่วไปและความสามารถในการบัดกรีระหว่างผิวโลหะกับโลหะบัดกรี</p>
+          <p data-i18n-key="ti_desc1">เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความทนทานและเสถียรภาพสูงกว่ามาตรฐานทั่วไปและความสามารถในการบัดกรีระหว่างผิวโลหะกับโลหะบัดกรี</p>
           <a class="more" href="matte-tinplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -560,7 +560,7 @@
         wb_title:"ไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์",
         ti_title: "น้ำยาชุบดีบุกเงา",
         ti_title1: "น้ำยาชุบดีบุกด้าน",
-        ti_desc1: "Teknomatte 8000 เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความทนทานและเสถียรภาพสูงกว่ามาตรฐานทั่วไปและความสามารถในการบัดกรีระหว่างผิวโลหะกับโลหะบัดกรี",
+        ti_desc1: "เป็นน้ำยาระบบใหม่สำหรับการชุบดีบุกด้าน (Matte Tin) ให้ผิวซาตินสม่ำเสมอ เงางามพอเหมาะ พร้อมสมบัติทางไฟฟ้าที่ดีเยี่ยม เหมาะกับงานอิเล็กทรอนิกส์ที่ต้องการความทนทานและเสถียรภาพสูงกว่ามาตรฐานทั่วไปและความสามารถในการบัดกรีระหว่างผิวโลหะกับโลหะบัดกรี",
         wb_desc:"สูตรปลอดไซยาไนด์ ลดความเสี่ยงด้านสิ่งแวดล้อม/ความปลอดภัย ผิวขาวเงิน เงา กระจายตัวดี คุมง่าย ลดต้นทุนบำบัด เหมาะกับถังแขวน/ถังกลิ้ง และโลหะฐานหลากหลาย",
         ti_desc: "น้ำยาชุบดีบุกเงาเป็นสารเคมีที่ใช้ในกระบวนการชุบโลหะด้วยไฟฟ้าเพื่อสร้างชั้นเคลือบดีบุกที่มีคุณสมบัติโดดเด่นในเรื่องความเงางาม การกระจายตัวที่ดีเยี่ยม และปราศจากรอยด่างดำหรือฝ้ามัวบนพื้นผิว ทำให้ได้ชิ้นงานที่ดูสวยงามและเรียบเนียนสม่ำเสมอ",
         
@@ -595,7 +595,7 @@
         wb_title:"Cyanide-Free White Bronze",
         ti_title: "Bright tin plating",
         ti_title1: "Matte tin plating",
-        ti_desc1: "Teknomatte 8000 is a new generation matte tin plating solution that provides a uniform satin finish with moderate gloss and excellent electrical properties. It is ideal for electronic applications requiring high reliability and solderability.",
+        ti_desc1: "New generation matte tin plating solution that provides a uniform satin finish with moderate gloss and excellent electrical properties. It is ideal for electronic applications requiring high reliability and solderability.",
         wb_desc:"Cyanide-free formula reduces environmental/safety risk. Silver-white bright finish with excellent distribution, easy control, lower treatment cost; suitable for rack/barrel and many substrates.",
         ti_desc: "A bright tin plating solution is a chemical used in electroplating to create a tin coating with exceptional brightness. It offers excellent throwing power, ensuring uniform plating coverage without producing dull, dark, or cloudy spots, resulting in a consistently smooth and aesthetically pleasing finish.",
         view_details:"View Details →",
