upload all files

--- a/products/equipment/labchemicals.html
+++ b/products/equipment/labchemicals.html
@@ -17,7 +17,7 @@
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
-  <meta property="og:type" content="article">
+  <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Lab Reagents — สารเคมีแล็บสำหรับวิเคราะห์น้ำยาชุบ">
   <meta property="og:description" content="รายการสารเคมีและสารละลายอ้างอิงที่ใช้วิเคราะห์น้ำยาชุบโลหะ พร้อมช่วงความเข้มข้นมาตรฐานและคำอธิบายการใช้งาน">
