--- a/products/equipment/toolschemical.html
+++ b/products/equipment/toolschemical.html
@@ -17,7 +17,7 @@
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
-  <meta property="og:type" content="article">
+  <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Lab Equipment — อุปกรณ์แล็บสำหรับงานชุปน้ำยา">
   <meta property="og:description" content="รวมรายการอุปกรณ์แล็บสำหรับวิเคราะห์/ควบคุมคุณภาพน้ำยาชุบโลหะ พร้อมวัสดุ/ขนาดอ้างอิงและคำแนะนำความปลอดภัย">
