--- a/products/platingcoating/cyanide-free-white-bronze/index.html
+++ b/products/platingcoating/cyanide-free-white-bronze/index.html
@@ -17,7 +17,7 @@
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="317M — Cyanide-free White Bronze">
   <meta property="og:description" content="ไวท์บรอนซ์ปลอดไซยาไนด์: หลักการ จุดเด่น make-up พารามิเตอร์ อุปกรณ์ และความปลอดภัย">
