--- a/products/platingcoating/nickelplating/troubleshootingennickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingennickel/index.html
@@ -16,8 +16,8 @@
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png" />
   <meta name="theme-color" content="#2c5e4e" />
 
-<meta property="og:type" content="product">
-<meta property="og:site_name" content="Baume Chemical">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="Baume Chemical">
 <meta property="og:title" content="EN Nickel (Electroless Nickel) — NI-508">
 <meta property="og:description" content="ภาพรวม จุดเด่น สูตรเมคอัพ พารามิเตอร์เดินงาน ขั้นตอนชุบ การปรับเติม อุปกรณ์ และความปลอดภัย">
 <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingennickel/index.html">
