--- a/products/platingcoating/nickelplating/troubleshootingnickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickel/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title data-i18n-key="title">Nickel Plating — ชุบนิกเกิลเงา | Baume Chemical Blog</title>
 
   <!-- SEO base -->
-  <meta name="description" content="การชุบนิกเกิล: ภาพรวม หลักการ คุณสมบัติ จุดเด่น การเตรียมบ่อ ขั้นตอนการชุบ สภาพการทำงาน และอุปกรณ์ที่จำเป็น" />
-  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickel/index.html" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png" />
-  <meta name="theme-color" content="#2c5e4e" />
+  <meta name="description" content="การชุบนิกเกิล: ภาพรวม หลักการ คุณสมบัติ จุดเด่น การเตรียมบ่อ ขั้นตอนการชุบ สภาพการทำงาน และอุปกรณ์ที่จำเป็น">
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickel/index.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
+  <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
-  <meta property="og:type" content="article" />
-  <meta property="og:site_name" content="Baume Chemical" />
-  <meta property="og:title" content="Nickel Plating — ชุบนิกเกิลเงา" />
-  <meta property="og:description" content="ภาพรวม หลักการ จุดเด่น สูตร Watt’s การเตรียมบ่อ ขั้นตอนชุบ และสภาพการทำงาน" />
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickel/index.html" />
-  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="Baume Chemical">
+  <meta property="og:title" content="Nickel Plating — ชุบนิกเกิลเงา">
+  <meta property="og:description" content="ภาพรวม หลักการ จุดเด่น สูตร Watt’s การเตรียมบ่อ ขั้นตอนชุบ และสภาพการทำงาน">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickel/index.html">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg">
+  <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
   {
