--- a/products/platingcoating/tinplating/index.html
+++ b/products/platingcoating/tinplating/index.html
@@ -17,8 +17,8 @@
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
-<meta property="og:type" content="product">
-<meta property="og:site_name" content="Baume Chemical">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="Baume Chemical">
 <meta property="og:title" content="BASn 4140 — น้ำยาชุบดีบุกเงา">
 <meta property="og:description" content="สัดส่วนการผสม ขั้นตอนชุบ พารามิเตอร์ อุปกรณ์ และเหตุผลที่ใช้ Tin Anode 99.9%">
 <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/">
