upload all files

--- a/404.html
+++ b/404.html
@@ -8,6 +8,10 @@
   <!-- SEO for 404 -->
   <meta name="robots" content="noindex,follow">
   <meta name="theme-color" content="#2c5e4e">
+  
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Baume Chemical">
+  <meta property="og:url" content="https://www.baumechemical.com/">
 
   <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
