--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -358,7 +358,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Aluminium</span><span class="badge">Room-Temp</span></div>
           <h3 data-i18n-key="al_title">รมดำสำหรับอลูมิเนียม</h3>
-          <p data-i18n-key="al_desc">การรมดำบนอลูมิเนียมเป็นการปรับปรุงพื้นผิวให้มีสีดำด้านหรือสีดำออกเทา เพื่อเพิ่มความสวยงามและเพิ่มคุณสมบัติการป้องกันการกัดกร่อน</p>
+          <p data-i18n-key="al_desc">การรมดำอลูมิเนียมคือกระบวนการทางเคมีที่ใช้ในการปรับเปลี่ยนพื้นผิวของอลูมิเนียมให้เป็นสีดำ กระบวนการนี้ไม่เพียงแต่ช่วยเพิ่มความสวยงามและความดุดันให้กับชิ้นงาน แต่ยังมีจุดประสงค์หลักเพื่อเพิ่มความต้านทานต่อการกัดกร่อนและลดการสะท้อนแสง/p>
           <a class="more" href="troubleshootingblackening.html#aluminium" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -512,15 +512,15 @@
         sec_products: "ผลิตภัณฑ์",
         sec_products_lead: "เลือกสูตรให้เหมาะกับวัสดุและกระบวนการของคุณ",
         bc_title: "รมดำสำหรับทองเหลือง/ทองแดง",
-        bc_desc: "ผสมกับน้ำสะอาดและจุ่มโดยไม่ต้องใช้ไฟหรือให้ความร้อน เกิดชั้นดำสม่ำเสมอทั้งชิ้น ขัดเผยลายทองแดง/ทองเหลืองได้ตามต้องการ จากนั้นเคลือบแลคเกอร์หรือน้ำมันเพื่อปิดผิว.",
+        bc_desc: "ผสมกับน้ำสะอาดและจุ่มโดยไม่ต้องใช้ไฟหรือให้ความร้อน เกิดชั้นดำสม่ำเสมอทั้งชิ้น ขัดเผยลายทองแดง/ทองเหลืองได้ตามต้องการ จากนั้นเคลือบแลคเกอร์หรือน้ำมันเพื่อปิดผิว",
         steel_title: "รมดำสำหรับเหล็ก",
-        steel_desc: "กระบวนการจุ่มเย็น ใช้งานง่าย สีดำสม่ำเสมอทั่วผิวชิ้นงาน สามารถขัดเผยเนื้อเหล็กเพื่อสร้างเอฟเฟกต์ และปิดผิวด้วยแลคเกอร์หรือน้ำมันภายหลัง.",
+        steel_desc: "กระบวนการจุ่มเย็น ใช้งานง่าย สีดำสม่ำเสมอทั่วผิวชิ้นงาน สามารถขัดเผยเนื้อเหล็กเพื่อสร้างเอฟเฟกต์ และปิดผิวด้วยแลคเกอร์หรือน้ำมันภายหลัง",
         zinc_title: "รมดำสำหรับซิงค์ฉีด",
-        zinc_desc: "จุ่มเย็น สีดำเรียบเนียน เหมาะกับชิ้นงานชุบซิงค์ฉีดหรือโลหะผสมสังกะสี สามารถปิดผิวด้วยแลคเกอร์/น้ำมันเพื่อยืดอายุการใช้งาน.",
+        zinc_desc: "จุ่มเย็น สีดำเรียบเนียน เหมาะกับชิ้นงานชุบซิงค์ฉีดหรือโลหะผสมสังกะสี สามารถปิดผิวด้วยแลคเกอร์/น้ำมันเพื่อยืดอายุการใช้งาน",
         al_title: "รมดำสำหรับอลูมิเนียม",
-        al_desc: "สารเข้มข้นต้องเจือจาง ใช้ที่อุณหภูมิห้อง 15–27°C (ไม่เกิน 30°C) เพื่อหลีกเลี่ยงการกัดผิวมากเกินไป ให้ชั้นดำสม่ำเสมอบนอลูมิเนียม.",
+        al_desc: "การรมดำอลูมิเนียมคือกระบวนการทางเคมีที่ใช้ในการปรับเปลี่ยนพื้นผิวของอลูมิเนียมให้เป็นสีดำ กระบวนการนี้ไม่เพียงแต่ช่วยเพิ่มความสวยงามและความดุดันให้กับชิ้นงาน แต่ยังมีจุดประสงค์หลักเพื่อเพิ่มความต้านทานต่อการกัดกร่อนและลดการสะท้อนแสง",
         patina_title: "สารทำพาทินา (Patina)",
-        patina_desc: "เร่งปฏิกิริยาออกซิเดชันบนผิวทองแดง/ทองเหลืองให้เกิดชั้นสีเขียวแบบธรรมชาติ เหมาะกับงานศิลป์ จิวเวลรี่ และสถาปัตยกรรม ลดเวลาจากหลายปีเหลือไม่กี่ชั่วโมง/วัน.",
+        patina_desc: "เร่งปฏิกิริยาออกซิเดชันบนผิวทองแดง/ทองเหลืองให้เกิดชั้นสีเขียวแบบธรรมชาติ เหมาะกับงานศิลป์ จิวเวลรี่ และสถาปัตยกรรม ลดเวลาจากหลายปีเหลือไม่กี่ชั่วโมง/วัน",
         view_details: "ดูรายละเอียด →",
         footer_products: "หมวดผลิตภัณฑ์",
         footer_contact: "ติดต่อเรา",
@@ -546,7 +546,7 @@
         zinc_title: "Blackening for Zinc",
         zinc_desc: "Room-temp blackening for zinc or zinc alloys with smooth, even color. Seal with lacquer/oil for durability.",
         al_title: "Blackening for Aluminium",
-        al_desc: "Concentrate to be diluted. Use at 15–27°C (≤30°C) to avoid over-etching. Delivers uniform black on aluminium.",
+        al_desc: "Aluminum blackening is a chemical process used to convert the surface of aluminum to a dark black finish. This treatment not only enhances the aesthetic appeal and provides a sleek appearance. Its primary purposes are to increase corrosion resistance and reduce light reflectivity.",
         patina_title: "Patina Solution",
         patina_desc: "Accelerates oxidation on copper/brass to form a natural green patina—great for art, jewelry, and architecture—cutting years to hours/days.",
         view_details: "View Details →",
