--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -358,7 +358,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Aluminium</span><span class="badge">Room-Temp</span></div>
           <h3 data-i18n-key="al_title">รมดำสำหรับอลูมิเนียม</h3>
-          <p data-i18n-key="al_desc">การรมดำอลูมิเนียมคือกระบวนการทางเคมีที่ใช้ในการปรับเปลี่ยนพื้นผิวของอลูมิเนียมให้เป็นสีดำ กระบวนการนี้ไม่เพียงแต่ช่วยเพิ่มความสวยงามและความดุดันให้กับชิ้นงาน แต่ยังมีจุดประสงค์หลักเพื่อเพิ่มความต้านทานต่อการกัดกร่อนและลดการสะท้อนแสง/p>
+          <p data-i18n-key="al_desc">การรมดำอลูมิเนียมคือกระบวนการทางเคมีที่ใช้ในการปรับเปลี่ยนพื้นผิวของอลูมิเนียมให้เป็นสีดำ กระบวนการนี้ไม่เพียงแต่ช่วยเพิ่มความสวยงามและความดุดันให้กับชิ้นงาน แต่ยังมีจุดประสงค์หลักเพื่อเพิ่มความต้านทานต่อการกัดกร่อนและลดการสะท้อนแสง</p>
           <a class="more" href="troubleshootingblackening.html#aluminium" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
