upload all files

--- a/products/platingcoating/nickelplating/index.html
+++ b/products/platingcoating/nickelplating/index.html
@@ -83,7 +83,7 @@
         "@type":"Product",
         "name":"Black Nickel Plating",
         "url":"https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html",
-        "image":"https://i.imgur.com/IGRAqiw.jpeg"
+        "image":"https://img2.pic.in.th/pic/thumbnail-5.jpg"
       }
     },
     {
@@ -492,7 +492,7 @@ body.no-scroll{ position:fixed; width:100% }
 
         <!-- Black Nickel -->
         <article id="black" class="card lift reveal">
-          <picture><img src="https://i.imgur.com/IGRAqiw.jpeg" alt="Black Nickel – consistent deep black decorative finish"></picture>
+          <picture><img src="https://img2.pic.in.th/pic/thumbnail-5.jpg" alt="Black Nickel – consistent deep black decorative finish"></picture>
           <div class="body">
             <div class="badges"><span class="badge">Black Nickel</span><span class="badge">Decorative</span></div>
             <h3 data-i18n-key="black_title">Black Nickel Plating</h3>
